testjsonParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from testjson.g4 by ANTLR 4.9

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9")]
[System.CLSCompliant(false)]
public partial class testjsonParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, STR_2=8, WS_3=9, 
		INT_5=10, FLOAT_6=11;
	public const int
		RULE_json = 0, RULE_gen__seplist__L44__pair = 1, RULE_gen__seplist__L44__json = 2, 
		RULE_pair = 3, RULE_str = 4, RULE_start = 5;
	public static readonly string[] ruleNames = {
		"json", "gen__seplist__L44__pair", "gen__seplist__L44__json", "pair", 
		"str", "start"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", "'{'", "'}'", "'null'", "','", "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, "STR_2", "WS_3", "INT_5", 
		"FLOAT_6"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "testjson.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static testjsonParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public testjsonParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public testjsonParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class JsonContext : ParserRuleContext {
		public json result;
		public Gen__seplist__L44__jsonContext local__2_json_case0;
		public Gen__seplist__L44__pairContext local__2_json_case1;
		public IToken local__1_json_case2;
		public IToken local__1_json_case3;
		public StrContext local__1_json_case4;
		[System.Diagnostics.DebuggerNonUserCode] public Gen__seplist__L44__jsonContext gen__seplist__L44__json() {
			return GetRuleContext<Gen__seplist__L44__jsonContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Gen__seplist__L44__pairContext gen__seplist__L44__pair() {
			return GetRuleContext<Gen__seplist__L44__pairContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT_5() { return GetToken(testjsonParser.INT_5, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT_6() { return GetToken(testjsonParser.FLOAT_6, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StrContext str() {
			return GetRuleContext<StrContext>(0);
		}
		public JsonContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_json; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.EnterJson(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.ExitJson(this);
		}
	}

	[RuleVersion(0)]
	public JsonContext json() {
		JsonContext _localctx = new JsonContext(Context, State);
		EnterRule(_localctx, 0, RULE_json);
		try {
			State = 31;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 12; Match(T__0);
				State = 13; _localctx.local__2_json_case0 = gen__seplist__L44__json(0);
				State = 14; Match(T__1);
				 
				        json tmp__2 ; 
				        System.Collections.Generic.List<json> tmp__1 ; 
				        tmp__1 = ( System.Collections.Generic.List<json> ) _localctx.local__2_json_case0.result ; 
				        tmp__2 = (json) json_list( tmp__1 ); 
				        _localctx.result =  tmp__2; 
				      
				}
				break;
			case T__2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 17; Match(T__2);
				State = 18; _localctx.local__2_json_case1 = gen__seplist__L44__pair(0);
				State = 19; Match(T__3);
				 
				        json tmp__5 ; 
				        System.Collections.Generic.Dictionary<string, json> tmp__4 ; 
				        System.Collections.Generic.List<(string, json)> tmp__3 ; 
				        tmp__3 = ( System.Collections.Generic.List<(string, json)> ) _localctx.local__2_json_case1.result ; 
				        tmp__4 = (System.Collections.Generic.Dictionary<string, json>) mk_dict<string,json>( tmp__3 ); 
				        tmp__5 = (json) json_dict( tmp__4 ); 
				        _localctx.result =  tmp__5; 
				      
				}
				break;
			case INT_5:
				EnterOuterAlt(_localctx, 3);
				{
				State = 22; _localctx.local__1_json_case2 = Match(INT_5);
				 
				        json tmp__8 ; 
				        int tmp__7 ; 
				        CommonToken tmp__6 ; 
				        tmp__6 = ( CommonToken ) _localctx.local__1_json_case2 ; 
				        tmp__7 = (int) parse_int( tmp__6.Text ); 
				        tmp__8 = (json) json_int( tmp__7 ); 
				        _localctx.result =  tmp__8; 
				      
				}
				break;
			case FLOAT_6:
				EnterOuterAlt(_localctx, 4);
				{
				State = 24; _localctx.local__1_json_case3 = Match(FLOAT_6);
				 
				        json tmp__11 ; 
				        float tmp__10 ; 
				        CommonToken tmp__9 ; 
				        tmp__9 = ( CommonToken ) _localctx.local__1_json_case3 ; 
				        tmp__10 = (float) parse_float( tmp__9.Text ); 
				        tmp__11 = (json) json_float( tmp__10 ); 
				        _localctx.result =  tmp__11; 
				      
				}
				break;
			case STR_2:
				EnterOuterAlt(_localctx, 5);
				{
				State = 26; _localctx.local__1_json_case4 = str();
				 
				        json tmp__14 ; 
				        string tmp__13 ; 
				        string tmp__12 ; 
				        tmp__12 = ( string ) _localctx.local__1_json_case4.result ; 
				        tmp__13 = (string) unesc_string( tmp__12 ); 
				        tmp__14 = (json) json_string( tmp__13 ); 
				        _localctx.result =  tmp__14; 
				      
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 6);
				{
				State = 29; Match(T__4);
				 
				        json tmp__15 ; 
				        tmp__15 = (json) json_null(  ); 
				        _localctx.result =  tmp__15; 
				      
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Gen__seplist__L44__pairContext : ParserRuleContext {
		public System.Collections.Generic.List<(string, json)> result;
		public Gen__seplist__L44__pairContext local__1_gen__seplist__L44__pair_case0;
		public PairContext local__1_gen__seplist__L44__pair_case1;
		public PairContext local__3_gen__seplist__L44__pair_case0;
		[System.Diagnostics.DebuggerNonUserCode] public PairContext pair() {
			return GetRuleContext<PairContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Gen__seplist__L44__pairContext gen__seplist__L44__pair() {
			return GetRuleContext<Gen__seplist__L44__pairContext>(0);
		}
		public Gen__seplist__L44__pairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gen__seplist__L44__pair; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.EnterGen__seplist__L44__pair(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.ExitGen__seplist__L44__pair(this);
		}
	}

	[RuleVersion(0)]
	public Gen__seplist__L44__pairContext gen__seplist__L44__pair() {
		return gen__seplist__L44__pair(0);
	}

	private Gen__seplist__L44__pairContext gen__seplist__L44__pair(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Gen__seplist__L44__pairContext _localctx = new Gen__seplist__L44__pairContext(Context, _parentState);
		Gen__seplist__L44__pairContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_gen__seplist__L44__pair, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 34; _localctx.local__1_gen__seplist__L44__pair_case1 = pair();
				 
				        System.Collections.Generic.List<(string, json)> tmp__21 ; 
				        (string, json) tmp__20 ; 
				        System.Collections.Generic.List<(string, json)> tmp__19 ; 
				        tmp__19 = (System.Collections.Generic.List<(string, json)>) nil<(string, json)>(  ); 
				        tmp__20 = ( (string, json) ) _localctx.local__1_gen__seplist__L44__pair_case1.result ; 
				        tmp__21 = (System.Collections.Generic.List<(string, json)>) append<(string, json)>( tmp__19, tmp__20 ); 
				        _localctx.result =  tmp__21; 
				      
				}
				break;
			case 2:
				{
				 
				        System.Collections.Generic.List<(string, json)> tmp__22 ; 
				        tmp__22 = (System.Collections.Generic.List<(string, json)>) nil<(string, json)>(  ); 
				        _localctx.result =  tmp__22; 
				      
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 47;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Gen__seplist__L44__pairContext(_parentctx, _parentState);
					_localctx.local__1_gen__seplist__L44__pair_case0 = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_gen__seplist__L44__pair);
					State = 40;
					if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
					State = 41; Match(T__5);
					State = 42; _localctx.local__3_gen__seplist__L44__pair_case0 = pair();
					 
					                  System.Collections.Generic.List<(string, json)> tmp__18 ; 
					                  (string, json) tmp__17 ; 
					                  System.Collections.Generic.List<(string, json)> tmp__16 ; 
					                  tmp__16 = ( System.Collections.Generic.List<(string, json)> ) _localctx.local__1_gen__seplist__L44__pair_case0.result ; 
					                  tmp__17 = ( (string, json) ) _localctx.local__3_gen__seplist__L44__pair_case0.result ; 
					                  tmp__18 = (System.Collections.Generic.List<(string, json)>) append<(string, json)>( tmp__16, tmp__17 ); 
					                  _localctx.result =  tmp__18; 
					                
					}
					} 
				}
				State = 49;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Gen__seplist__L44__jsonContext : ParserRuleContext {
		public System.Collections.Generic.List<json> result;
		public Gen__seplist__L44__jsonContext local__1_gen__seplist__L44__json_case0;
		public JsonContext local__1_gen__seplist__L44__json_case1;
		public JsonContext local__3_gen__seplist__L44__json_case0;
		[System.Diagnostics.DebuggerNonUserCode] public JsonContext json() {
			return GetRuleContext<JsonContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Gen__seplist__L44__jsonContext gen__seplist__L44__json() {
			return GetRuleContext<Gen__seplist__L44__jsonContext>(0);
		}
		public Gen__seplist__L44__jsonContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gen__seplist__L44__json; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.EnterGen__seplist__L44__json(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.ExitGen__seplist__L44__json(this);
		}
	}

	[RuleVersion(0)]
	public Gen__seplist__L44__jsonContext gen__seplist__L44__json() {
		return gen__seplist__L44__json(0);
	}

	private Gen__seplist__L44__jsonContext gen__seplist__L44__json(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Gen__seplist__L44__jsonContext _localctx = new Gen__seplist__L44__jsonContext(Context, _parentState);
		Gen__seplist__L44__jsonContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_gen__seplist__L44__json, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 51; _localctx.local__1_gen__seplist__L44__json_case1 = json();
				 
				        System.Collections.Generic.List<json> tmp__28 ; 
				        json tmp__27 ; 
				        System.Collections.Generic.List<json> tmp__26 ; 
				        tmp__26 = (System.Collections.Generic.List<json>) nil<json>(  ); 
				        tmp__27 = ( json ) _localctx.local__1_gen__seplist__L44__json_case1.result ; 
				        tmp__28 = (System.Collections.Generic.List<json>) append<json>( tmp__26, tmp__27 ); 
				        _localctx.result =  tmp__28; 
				      
				}
				break;
			case 2:
				{
				 
				        System.Collections.Generic.List<json> tmp__29 ; 
				        tmp__29 = (System.Collections.Generic.List<json>) nil<json>(  ); 
				        _localctx.result =  tmp__29; 
				      
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 64;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Gen__seplist__L44__jsonContext(_parentctx, _parentState);
					_localctx.local__1_gen__seplist__L44__json_case0 = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_gen__seplist__L44__json);
					State = 57;
					if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
					State = 58; Match(T__5);
					State = 59; _localctx.local__3_gen__seplist__L44__json_case0 = json();
					 
					                  System.Collections.Generic.List<json> tmp__25 ; 
					                  json tmp__24 ; 
					                  System.Collections.Generic.List<json> tmp__23 ; 
					                  tmp__23 = ( System.Collections.Generic.List<json> ) _localctx.local__1_gen__seplist__L44__json_case0.result ; 
					                  tmp__24 = ( json ) _localctx.local__3_gen__seplist__L44__json_case0.result ; 
					                  tmp__25 = (System.Collections.Generic.List<json>) append<json>( tmp__23, tmp__24 ); 
					                  _localctx.result =  tmp__25; 
					                
					}
					} 
				}
				State = 66;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class PairContext : ParserRuleContext {
		public (string, json) result;
		public StrContext local__1_pair_case0;
		public JsonContext local__3_pair_case0;
		[System.Diagnostics.DebuggerNonUserCode] public StrContext str() {
			return GetRuleContext<StrContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JsonContext json() {
			return GetRuleContext<JsonContext>(0);
		}
		public PairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pair; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.EnterPair(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.ExitPair(this);
		}
	}

	[RuleVersion(0)]
	public PairContext pair() {
		PairContext _localctx = new PairContext(Context, State);
		EnterRule(_localctx, 6, RULE_pair);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; _localctx.local__1_pair_case0 = str();
			State = 68; Match(T__6);
			State = 69; _localctx.local__3_pair_case0 = json();
			 
			        json tmp__32 ; 
			        string tmp__31 ; 
			        (string, json) tmp__30 ; 
			        tmp__31 = ( string ) _localctx.local__1_pair_case0.result ; 
			        tmp__32 = ( json ) _localctx.local__3_pair_case0.result ; 
			        tmp__30 = ( tmp__31 , tmp__32 ); 
			        _localctx.result =  tmp__30; 
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StrContext : ParserRuleContext {
		public string result;
		public IToken local__1_str_case0;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STR_2() { return GetToken(testjsonParser.STR_2, 0); }
		public StrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_str; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.EnterStr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.ExitStr(this);
		}
	}

	[RuleVersion(0)]
	public StrContext str() {
		StrContext _localctx = new StrContext(Context, State);
		EnterRule(_localctx, 8, RULE_str);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; _localctx.local__1_str_case0 = Match(STR_2);
			 
			        CommonToken tmp__33 ; 
			        tmp__33 = ( CommonToken ) _localctx.local__1_str_case0 ; 
			        _localctx.result =  tmp__33.Text; 
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartContext : ParserRuleContext {
		public json result;
		public JsonContext local__1_start_case0;
		[System.Diagnostics.DebuggerNonUserCode] public JsonContext json() {
			return GetRuleContext<JsonContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItestjsonListener typedListener = listener as ItestjsonListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 10, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; _localctx.local__1_start_case0 = json();
			 
			        json tmp__34 ; 
			        tmp__34 = ( json ) _localctx.local__1_start_case0.result ; 
			        _localctx.result =  tmp__34; 
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 1: return gen__seplist__L44__pair_sempred((Gen__seplist__L44__pairContext)_localctx, predIndex);
		case 2: return gen__seplist__L44__json_sempred((Gen__seplist__L44__jsonContext)_localctx, predIndex);
		}
		return true;
	}
	private bool gen__seplist__L44__pair_sempred(Gen__seplist__L44__pairContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(Context, 3);
		}
		return true;
	}
	private bool gen__seplist__L44__json_sempred(Gen__seplist__L44__jsonContext _localctx, int predIndex) {
		switch (predIndex) {
		case 1: return Precpred(Context, 3);
		}
		return true;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
